misc/orcaslicer/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcaslicer
  namespace: misc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orcaslicer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: orcaslicer
    spec:
      containers:
      - image: lscr.io/linuxserver/orcaslicer:2.3.1
        name: orcaslicer
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
          name: https
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
      restartPolicy: Always
      volumes:
      - name: config
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/config/orcaslicer
