misc/orcaslicer/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orcaslicer-service
  namespace: misc
spec:
  type: ClusterIP
  selector:
    app: orcaslicer
  ports:
  - name: https
    protocol: TCP
    port: 3001
    targetPort: 3001
