misc/orcaslicer/03-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: orcaslicer-ingress
  namespace: misc
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`orcaslicer.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: orcaslicer-service
      port: https
      serversTransport: orcaslicer-transport
